modified index.htm stle.css and readme file

--- a/style.css
+++ b/style.css
@@ -22,27 +22,26 @@ header {
   width: 100%;
 }
 
-.toolbar-nav {
+.my-logo {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #fff;
-  height: 48px;
-  padding-right: 28px;
 }
 
 .logo {
   text-decoration: none;
-  margin: 0;
-  -webkit-box-flex: 6;
-  -ms-flex: 6;
-  flex: 6;
   color: #6070ff;
   font-size: 18px;
   line-height: 20px;
   font-weight: 700;
-  padding-left: 24px;
+  padding-left: 20px;
+  padding-top: 12px;
+}
+
+.menu-bar {
+  padding-left: 260px;
+  color: #6070ff;
+  font-size: 20px;
+  padding-bottom: 13px;
+  padding-top: 10px;
 }
 
 .headline-wrap {
