add files to both html and style.css file

--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-  font-family: "Poppins", sans-serif;
-  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
   background-color: #e5e5e5;
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .text-color-primary {
@@ -92,10 +94,49 @@ header {
   padding-top: 12px;
 }
 
+/* buttons */
+.button {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 48px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  text-transform: capitalize;
+  border-radius: 8px;
+  margin-top: 24px;
+  background-color: transparent;
+}
+
+.button:hover {
+  background-color: #6070ff;
+  color: #fff;
+}
+
+.button:focus {
+  border: 1px solid #2230d2;
+  background-color: #2230d2;
+  color: #fff;
+}
+
+.button-enabled {
+  color: #396df2;
+  border: 1px solid #6070ff;
+}
+
+.button-disabled,
+.button[disabled] {
+  border: 1px solid #5e6c84;
+  background-color: #fff;
+  color: #5e6c84;
+}
+
 .social-icons {
   display: flex;
   margin: 0;
-  padding-left: 18px;
   padding-top: 12px;
 }
 
@@ -106,4 +147,152 @@ header {
 
 .social {
   height: 18px;
+}
+
+/* Works section */
+.works-grid-container {
+  -ms-grid-columns: auto;
+  grid-template-columns: auto;
+  -ms-grid-rows: 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 114px 0;
+  padding-top: 114px;
+}
+
+.works-grid-container > *:nth-child(1) {
+  -ms-grid-row: 1;
+  grid-row: 1;
+  -ms-grid-column: 1;
+  grid-column: 1;
+}
+
+.works-grid-item {
+  background-color: #fff;
+  border: 1px solid #dfe1e6;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border-radius: 16px;
+  padding: 16px;
+  min-height: 100px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.work-period ul {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  padding-left: 0;
+}
+
+.work-categories li {
+  padding: 4px 12px;
+  background: #ebebff;
+  border-radius: 8px;
+  color: #6070ff;
+}
+
+.work-period ul li {
+  margin: 10px 10px 0;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.work-categories li:not(:first-child) {
+  margin-left: 8px;
+}
+
+.work-period ul li:first-child {
+  list-style: none;
+  margin-left: 0;
+  text-transform: uppercase;
+}
+
+.work-period ul li:not(:first-child) {
+  color: #7a869a;
+}
+
+.work-description {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+}
+
+.work-categories {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  list-style: none;
+}
+
+/* About section */
+.about-wrap {
+  padding: 114px 24px 136px 24px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  background-image: url(../personal-portfolio/image/baseaboutmyself.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Other info */
+.other-info-wrap {
+  list-style: none;
+}
+
+.other-info-wrap .other-info-list {
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 20px 0;
+  border-bottom: 1px solid #dfe1e6;
+}
+
+.other-info-wrap .other-info-list h4 {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  color: #000;
+}
+
+.other-info-wrap .li-flex {
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.other-info-details {
+  padding-top: 36px;
+  padding-left: 4px;
+  list-style-type: none;
+  width: 100%;
+}
+
+.view-list-item {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: #fff;
+  padding: 9px 12px;
+  border-radius: 8px;
+  margin-bottom: 12px;
+}
+
+.view-list-item img.lang-icon {
+  -ms-flex-preferred-size: 48px;
+  flex-basis: 48px;
+  width: 48px;
+  margin-right: 16px;
+}
+
+.view-list-item .lang-name {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #253858;
 }
