Add flex to form contact

--- a/style.css
+++ b/style.css
@@ -372,6 +372,8 @@ h2.section-title {
 }
 
 .contact_container .form {
+  display: flex;
+  flex-direction: column;
   max-width: 300px;
   margin: 20px auto;
 }
