--- a/style.css
+++ b/style.css
@@ -49,6 +49,17 @@ header {
   font-weight: 700;
   padding-left: 20px;
   padding-top: 12px;
+  animation: rotate 1s linear;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .menu-bar {
@@ -164,6 +175,10 @@ header {
   grid-row: 1;
   -ms-grid-column: 1;
   grid-column: 1;
+}
+
+.works-grid-container:hover {
+  transform: scale(1.1);
 }
 
 .works-grid-item {
