modify style.css app.js file

--- a/style.css
+++ b/style.css
@@ -386,7 +386,7 @@ h1.section-title {
   padding: 4px 12px;
   background: #ebebff;
   border-radius: 8px;
-  color: #6070ff;
+  color: #8893f7;
 }
 
 .work-period ul li {
